--- a/style.css
+++ b/style.css
@@ -5,15 +5,15 @@
 }
 
 :root {
-    --clr-1: #052b2f;
-    --clr-2: #073438;
-    --clr-3: #0e4b50;
-    --clr-4: #2d8f85;
-    --clr-5: #637c54;
+    --clr-1: #000;
+    --clr-2: #461D7C;
+    --clr-3: #FDD023;
+    --clr-4: #FFF;
+    --clr-5: #461D7C;
 }
 
 body {
-    background: var(--clr-2);
+    background: var(--clr-1);
     min-height: 100vh;
     display: grid;
     place-content: center;
@@ -22,7 +22,7 @@ body {
 .card {
     height: 60vh;
     aspect-ratio: 1 / 1.5;
-    background: var(--clr-1);
+    background: var(--clr-4);
     border-radius: 0.5rem;
     position: relative;
 }
@@ -41,7 +41,7 @@ body {
         var(--clr-4),
         var(--clr-3));
     border-radius: inherit;
-    animation: rotation 3s linear infinite;
+    animation: rotation 8s linear infinite;
 }
 
 .card::after {
